@@ -1,10 +1,10 @@
 #!/bin/bash
 #
 # chkconfig: 2345 16 84
-# description: A RIP routing engine for use with Zebra and IPv6
+# description: An ISIS routing engine for use with Quagga
 #
-# processname: ripngd
-# config: /etc/quagga/ripngd.conf
+# processname: isisd
+# config: /etc/quagga/isisd.conf
 
 # source function library
 . /etc/rc.d/init.d/functions
@@ -12,31 +12,29 @@
 # Get network config
 . /etc/sysconfig/network
 
-# quagga command line options
-. /etc/sysconfig/quagga
-
 # Check that networking is up.
-[ "${NETWORKING_IPV6}" = "no" ] && exit 0
+[ "${NETWORKING}" = "no" ] && exit 0
 
 # The process must be configured first.
-[ -f /etc/quagga/ripngd.conf ] || exit 0
+[ -f /etc/quagga/isisd.conf ] || exit 0
 
 RETVAL=0
-prog="ripngd"
+
+prog="isisd"
 
 case "$1" in
   start)
 	echo -n $"Starting $prog: "
-        daemon /usr/sbin/ripngd -d $RIPNGD_OPTS
+        daemon /usr/sbin/isisd -d
 	RETVAL=$?
-	[ $RETVAL -eq 0 ] && touch /var/lock/subsys/ripngd
+	[ $RETVAL -eq 0 ] && touch /var/lock/subsys/isisd
 	echo
 	;;
   stop)
 	echo -n $"Shutting down $prog: "
-	killproc ripngd
+	killproc isisd
 	RETVAL=$?
-	[ $RETVAL -eq 0 ] && rm -f /var/lock/subsys/ripngd
+	[ $RETVAL -eq 0 ] && rm -f /var/lock/subsys/isisd
 	echo
 	;;
   restart|reload)
@@ -45,14 +43,14 @@ case "$1" in
 	RETVAL=$?
         ;;
   condrestart)
-        if [ -f /var/lock/subsys/ripngd ]; then
+        if [ -f /var/lock/subsys/isisd ]; then
                 $0 stop
 		$0 start
         fi
 	RETVAL=$?
         ;;
   status)
-        status ripngd
+        status isisd
 	RETVAL=$?
         ;;
   *)
