@@ -1,6 +1,6 @@
 #!/bin/bash
 #
-# chkconfig: - 16 84
+# chkconfig: 2345 16 84
 # description: An OSPF routing engine for use with Zebra and IPv6
 #
 # processname: ospf6d
@@ -11,6 +11,9 @@
 
 # Get network config
 . /etc/sysconfig/network
+
+# quagga command line options
+. /etc/sysconfig/quagga
 
 # Check that networking is up.
 [ "${NETWORKING_IPV6}" = "no" ] && exit 0
@@ -24,7 +27,7 @@ prog="ospf6d"
 case "$1" in
   start)
 	echo -n $"Starting $prog: "
-        daemon /usr/sbin/ospf6d -d
+        daemon /usr/sbin/ospf6d -d $OSPF6D_OPTS
 	RETVAL=$?
 	[ $RETVAL -eq 0 ] && touch /var/lock/subsys/ospf6d
 	echo
